Updating team section and experimenting with Material Grid lists

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,77 +1,195 @@
 <div class="darktheme page-container">
-  
-    <h1 class="page-header">ABOUT</h1>
-    <hr>
-    <div class="row">
-      <div class="col-lg-6">
-        <section>
-          <img src="../../assets/images/jjohnston_circle.png" alt="Jacob's Headshot'">
-          <!--<div class="picture"></div>-->
-          <article>
-            <h3>Jacob Johnston</h3>
-            <p>
-              He's a lover of science and technology, soaking up all the latest and greatest web development and design tools, trends, and methodologies. Jacob takes great pleasure in creating powerful, performant, dynamic web applications and beautiful, intuitive user interfaces. He also has a degree in entrepreneurship (yeah, that's a thing these days) and is always following case studies and the latest findings about what works and doesn't for startups and growing businesses.
-            </p>
-  
-            <p>
-              After spending a few years doing data science for big names like Intel and Nike, he realized the best part of that job was designing and programming useful automations and interfaces for other analysts and data scientists to leverage in their work. Turns out, he just loves creating things that people find useful and aesthetically appealing. Still, he gets especially enthused when there's the potential to aggregate lots of data into fun and enlightening resources for user consumption.
-            </p>
-  
-            <p>
-              Jacob's other core passion is entrepreneurship. Growing up, he wanted to be an "inventor" but realized all the great scientists and inventors he most admired shared a common thread of entrepreneurial zeal and talent, so figured he'd shift his major from computer science to entrepreneurship since his school was one of the first to offer this as a concentration. He has worked with companies big and small and seen what works and doesn’t, and even started a couple ventures himself. He spends a lot of time reading up on the latest studies and findings about the often counterintuitive science, art, and discipline of technology entrepreneurship.
-            </p>
-  
-            <p>
-              His greatest offering is in early-stage concept validation, prototyping, and entrepreneurial consulting. By combining his understanding of programming and application architecture, his instinct for great design, and his foundation in the world of entrepreneurship, he can help ensure that your business gets off to a solid start or sales smoothly through a tough growth spurt. Have a great idea, entrepreneurial urges, and access to resources but still not making the progress you want? Jacob can help.
-            </p>
-  
-            <p>
-              His favorite thing to do today is help make <strong>your business</strong> better with tools and applications, or just help you get it off the ground in the first place.
-            </p>
-          </article>
-        </section>
-      </div>
-  
-      <div class="col-lg-6">
-        <section>
-          <img src="../../assets/images/tmendoza_circle.png" alt="Tricia's Headshot'">
-          <article>
-            <h3>Tricia Mendoza</h3>
-            <p>
-              Born with a forest green crayon in one hand and a keyboard and mouse in the other, from day one, Tricia was ready to tackle
-              the technological trends that would affect the design world.
-            </p>
-            <p>
-              Making sure not to get tempted with the financial stability that comes with pursuing a career in the medical field, she stayed
-              on track by achieving a Bachelors Degree in Illustration from California State University, Long Beach. She plans
-              to fulfill her childhood prophecy of furthering her claim in the design community by using shapes, lines, and
-              composition in ways they thought they never could be used before. Watch out for her, as she is just getting warmed
-              up.
-            </p>
-  
-            <p>
-              Tricia is a Freelance Interaction Designer who currently resides in the green-filled wonderland that is Portland, OR with
-              her patiently supportive and encouraging significant other, Jacob, and their confidently introverted hamster
-              Freddie Pepper who always graciously declines out-of-the-cage-time when the clock hits 7pm. When she is not busy
-              fulfilling her prophecy, she enjoys hiking, drooling over the <a href="https://dribbble.com/" target="_blank">dribbble</a>            feed, and slaving away in the kitchen.
-            </p>
-  
-            <p>
-              She also goes by the name "<a href="https://www.instagram.com/tvmopperator/" target="_blank">tvmopperator</a>"
-              so feel free to google her for your various social media needs! You'll mainly spot her roaming around <a href="https://www.instagram.com/tvmopperator/"
-                target="_blank">instagram</a>. End rant.
-            </p>
-          </article>
-        </section>
-      </div>
-  
+
+  <h1 class="page-header">ABOUT THE TEAM</h1>
+  <hr>
+
+  <mat-grid-list cols="2" rowHeight="900px">
+    <mat-grid-tile>
+      <section>
+        <img class="team-image" src="../../assets/images/jjohnston_circle.png" alt="Jacob's Headshot'">
+        <!--<div class="picture"></div>-->
+        <article class="description">
+          <h3>Jacob Johnston</h3>
+          <p>
+            He's a lover of science and technology, soaking up all the latest and greatest web development and design tools, trends,
+            and methodologies. Jacob takes great pleasure in creating powerful, performant, dynamic web applications and
+            beautiful, intuitive user interfaces. He also has a degree in entrepreneurship (yeah, that's a thing these days)
+            and is always following case studies and the latest findings about what works and doesn't for startups and growing
+            businesses.
+          </p>
+
+          <p>
+            After spending a few years doing data science for big names like Intel and Nike, he realized the best part of that job was
+            designing and programming useful automations and interfaces for other analysts and data scientists to leverage
+            in their work. Turns out, he just loves creating things that people find useful and aesthetically appealing.
+            Still, he gets especially enthused when there's the potential to aggregate lots of data into fun and enlightening
+            resources for user consumption.
+          </p>
+
+          <p>
+            Jacob's other core passion is entrepreneurship. Growing up, he wanted to be an "inventor" but realized all the great scientists
+            and inventors he most admired shared a common thread of entrepreneurial zeal and talent, so figured he'd shift
+            his major from computer science to entrepreneurship since his school was one of the first to offer this as a
+            concentration. He has worked with companies big and small and seen what works and doesn’t, and even started a
+            couple ventures himself. He spends a lot of time reading up on the latest studies and findings about the often
+            counterintuitive science, art, and discipline of technology entrepreneurship.
+          </p>
+
+          <p>
+            His greatest offering is in early-stage concept validation, prototyping, and entrepreneurial consulting. By combining his
+            understanding of programming and application architecture, his instinct for great design, and his foundation
+            in the world of entrepreneurship, he can help ensure that your business gets off to a solid start or sales smoothly
+            through a tough growth spurt. Have a great idea, entrepreneurial urges, and access to resources but still not
+            making the progress you want? Jacob can help.
+          </p>
+
+          <p>
+            His favorite thing to do today is help make
+            <strong>your business</strong> better with tools and applications, or just help you get it off the ground in the first
+            place.
+          </p>
+        </article>
+      </section>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <section>
+        <img class="team-image" src="../../assets/images/tmendoza_circle.png" alt="Tricia's Headshot'">
+        <article class="description">
+          <h3>Tricia Mendoza</h3>
+          <p>
+            Born with a forest green crayon in one hand and a keyboard and mouse in the other, from day one, Tricia was ready to tackle
+            the technological trends that would affect the design world.
+          </p>
+          <p>
+            Making sure not to get tempted with the financial stability that comes with pursuing a career in the medical field, she stayed
+            on track by achieving a Bachelors Degree in Illustration from California State University, Long Beach. She plans
+            to fulfill her childhood prophecy of furthering her claim in the design community by using shapes, lines, and
+            composition in ways they thought they never could be used before. Watch out for her, as she is just getting warmed
+            up.
+          </p>
+
+          <p>
+            Tricia is a Freelance Interaction Designer who currently resides in the green-filled wonderland that is Portland, OR with
+            her patiently supportive and encouraging significant other, Jacob, and their confidently introverted hamster
+            Freddie Pepper who always graciously declines out-of-the-cage-time when the clock hits 7pm. When she is not busy
+            fulfilling her prophecy, she enjoys hiking, drooling over the
+            <a href="https://dribbble.com/" target="_blank">dribbble</a> feed, and slaving away in the kitchen.
+          </p>
+
+          <p>
+            She also goes by the name "
+            <a href="https://www.instagram.com/tvmopperator/" target="_blank">tvmopperator</a>" so feel free to google her for your various social media needs! You'll mainly spot her roaming
+            around
+            <a href="https://www.instagram.com/tvmopperator/" target="_blank">instagram</a>. End rant.
+          </p>
+        </article>
+      </section>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <section>
+        <img class="team-image" src="../../assets/images/jparsley.jpg" alt="joe">
+        <article class="description">
+          <h3>Joe Parsley</h3>
+          <p>
+            Born and raised in Oregon, Joe enjoys all of the amazing things the Pacific Northwest has to offer. He loves all things nerdy
+            and has a passion for designing and writing code
+          </p>
+          <p>
+            After working in restaurant management for several years, Joe wanted a way to combine his love for making things work with
+            his passion for technology. He eventually found himself enrolled at a coding bootcamp in downtown called Epicodus.
+            It was here that he found his true passion. Programing.
+          </p>
+          <p>
+            Now Joe spends his days engineering User Interfaces that help make people get things that they need done, Done.
+          </p>
+        </article>
+      </section>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+  <!-- <div class="row">
+    <div class="col-lg-6">
+      <section>
+        <img src="../../assets/images/jjohnston_circle.png" alt="Jacob's Headshot'">
+        <article>
+          <h3>Jacob Johnston</h3>
+          <p>
+            He's a lover of science and technology, soaking up all the latest and greatest web development and design tools, trends,
+            and methodologies. Jacob takes great pleasure in creating powerful, performant, dynamic web applications and
+            beautiful, intuitive user interfaces. He also has a degree in entrepreneurship (yeah, that's a thing these days)
+            and is always following case studies and the latest findings about what works and doesn't for startups and growing
+            businesses.
+          </p>
+
+          <p>
+            After spending a few years doing data science for big names like Intel and Nike, he realized the best part of that job was
+            designing and programming useful automations and interfaces for other analysts and data scientists to leverage
+            in their work. Turns out, he just loves creating things that people find useful and aesthetically appealing.
+            Still, he gets especially enthused when there's the potential to aggregate lots of data into fun and enlightening
+            resources for user consumption.
+          </p>
+
+          <p>
+            Jacob's other core passion is entrepreneurship. Growing up, he wanted to be an "inventor" but realized all the great scientists
+            and inventors he most admired shared a common thread of entrepreneurial zeal and talent, so figured he'd shift
+            his major from computer science to entrepreneurship since his school was one of the first to offer this as a
+            concentration. He has worked with companies big and small and seen what works and doesn’t, and even started a
+            couple ventures himself. He spends a lot of time reading up on the latest studies and findings about the often
+            counterintuitive science, art, and discipline of technology entrepreneurship.
+          </p>
+
+          <p>
+            His greatest offering is in early-stage concept validation, prototyping, and entrepreneurial consulting. By combining his
+            understanding of programming and application architecture, his instinct for great design, and his foundation
+            in the world of entrepreneurship, he can help ensure that your business gets off to a solid start or sales smoothly
+            through a tough growth spurt. Have a great idea, entrepreneurial urges, and access to resources but still not
+            making the progress you want? Jacob can help.
+          </p>
+
+          <p>
+            His favorite thing to do today is help make
+            <strong>your business</strong> better with tools and applications, or just help you get it off the ground in the first
+            place.
+          </p>
+        </article>
+      </section>
     </div>
-  
+
+    <div class="col-lg-6">
+      <section>
+        <img src="../../assets/images/tmendoza_circle.png" alt="Tricia's Headshot'">
+        <article>
+          <h3>Tricia Mendoza</h3>
+          <p>
+            Born with a forest green crayon in one hand and a keyboard and mouse in the other, from day one, Tricia was ready to tackle
+            the technological trends that would affect the design world.
+          </p>
+          <p>
+            Making sure not to get tempted with the financial stability that comes with pursuing a career in the medical field, she stayed
+            on track by achieving a Bachelors Degree in Illustration from California State University, Long Beach. She plans
+            to fulfill her childhood prophecy of furthering her claim in the design community by using shapes, lines, and
+            composition in ways they thought they never could be used before. Watch out for her, as she is just getting warmed
+            up.
+          </p>
+
+          <p>
+            Tricia is a Freelance Interaction Designer who currently resides in the green-filled wonderland that is Portland, OR with
+            her patiently supportive and encouraging significant other, Jacob, and their confidently introverted hamster
+            Freddie Pepper who always graciously declines out-of-the-cage-time when the clock hits 7pm. When she is not busy
+            fulfilling her prophecy, she enjoys hiking, drooling over the
+            <a href="https://dribbble.com/" target="_blank">dribbble</a> feed, and slaving away in the kitchen.
+          </p>
+
+          <p>
+            She also goes by the name "
+            <a href="https://www.instagram.com/tvmopperator/" target="_blank">tvmopperator</a>" so feel free to google her for your various social media needs! You'll mainly spot her roaming
+            around
+            <a href="https://www.instagram.com/tvmopperator/" target="_blank">instagram</a>. End rant.
+          </p>
+        </article>
+      </section>
+    </div>
+
   </div>
-  
-  <!-- 
-  ====================================
-  SECTION 6 - FOOTER 
-  ====================================  
-  -->
-  <app-footer></app-footer>
+
+</div> -->
