--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~@angular/material/prebuilt-themes/purple-green.css';
 body {
   /*To keep from hiding under navbar*/
   /*padding-top: 50px;*/
