tweaks to home + added BIM sample

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,19 +10,19 @@ SECTION 1.1 - HERO IMAGE/PAGE TITLE
   <article>
     <div class="container clearfix">
       <!--<div class="row">-->
-        <div id="jumbo-container">
-          <div class="col-sm-12 jumbotron">
-            <p>
-              <!-- <a routerLink="../about">JACOB JOHNSTON &#58; TRICIA MENDOZA</a> -->
-            </p>
-            <h1 id="homeHeading">FLIGHT</h1>
-            <p>&#123; &#123; WEB DEV &amp; DESIGN | ENTREPRENEURIAL CONSULTING &#125; &#125;</p>
-          </div>
+      <div id="jumbo-container">
+        <div class="col-sm-12 jumbotron">
+          <p>
+            <!-- <a routerLink="../about">JACOB JOHNSTON &#58; TRICIA MENDOZA</a> -->
+          </p>
+          <h1 id="homeHeading">FLIGHT</h1>
+          <p>&#123; &#123; WEB DEV &amp; DESIGN | ENTREPRENEURIAL CONSULTING &#125; &#125;</p>
         </div>
+      </div>
 
-        <!-- col-sm-7 -->
+      <!-- col-sm-7 -->
 
-        
+
 
       <!--</div>-->
       <!-- row -->
@@ -30,7 +30,7 @@ SECTION 1.1 - HERO IMAGE/PAGE TITLE
     <!-- container -->
   </article>
   <!--<div class="hero-img-container">-->
-    <img id="heroImg" src="../../assets/images/flightLogo_notext.png" alt="Flight logo">
+  <img id="heroImg" src="../../assets/images/flightLogo_notext.png" alt="Flight logo">
   <!--</div>-->
 </section>
 <!-- hero -->
@@ -46,6 +46,16 @@ SECTION 1.2 - OVERVIEW
   <h2>WE DO AWESOME RIGHT</h2>
   <h4 id="awesome-p">A boutique web development and design agency offering startup and entrepreneurial consulting</h4>
   <h3 id="awesome-h3" class="italic">. . . at your service . . .</h3>
+  <p class="what-we-do">If you have a great idea, entrepreneurial drive, and access to resources but you're having trouble formulating your first
+    moves, we can help!</p>
+  <p class="what-we-do">Our entrepreneurial consulting services are available as a part of a launch project or as a stand-alone service. At Flight,
+    we're mastering the art of the MVP. We're honing in on the optimal combo of lean startup best practices, agile development
+    methodologies, and awesome sauce. We've assembled a tech stack (combination of tools and technologies used to create
+    software) which allows for affordable rapid prototyping that can be scaled and transitioned into enterprise-scale services
+    without starting from scratch. That means we can leverage all the code and work we did to launch your MVP while we're
+    building and scaling your next-big-thing.</p>
+  <p class="what-we-do">We also provide a full suite of branding, custom graphics and icons, and professional web design. You can order them as
+    sides, appetizers, or as a core element of our primary engineering services.</p>
   <!--<hr>-->
   <div class="equidistant-container">
     <a href="#icons-scrollpoint" class="overview-item">
@@ -53,7 +63,8 @@ SECTION 1.2 - OVERVIEW
         <img src="../../assets/images/services_icons.graphics.png" alt="Stuff and things..." class="overview-image">
       </div>
       <h3>Icons &amp; Graphics</h3>
-      <p>One of a kind, custom graphics and icons perfect to convey your meaning and captivate your audiance, while helping you stand out from the crowd and directing the attention where it's needed most.</p>
+      <p>One of a kind, custom graphics and icons perfect to convey your meaning and captivate your audiance, while helping
+        you stand out from the crowd and directing the attention where it's needed most.</p>
     </a>
     <!--<hr>-->
     <a href="#layout-scrollpoint" class="overview-item">
@@ -73,8 +84,8 @@ SECTION 1.2 - OVERVIEW
       </div>
       <h3>Apps &amp; Tools</h3>
       <p>
-        Powerful, snappy, data-driven apps and tools help you and your people get the job done better and faster.
-        Cloud-based, performant, and as simple or intricate as needed. From rapid prototyping to enterprise scale.
+        Powerful, snappy, data-driven apps and tools help you and your people get the job done better and faster. Cloud-based, performant,
+        and as simple or intricate as needed. From rapid prototyping to enterprise scale.
         <!-- You'd be surprised where a simple application can make a big impact in your business or workflow. -->
       </p>
     </a>
@@ -173,6 +184,12 @@ SECTION 5 - APPS
 <section id="apps" class="web-screenshots whiteBGtitle">
   <div class="section-box">
     <a routerLink="../apps">
+      <img src="../../assets/images/BIM/BIM_v1_content_example.jpg" alt="BIM Earth content example" class="sites-example">
+    </a>
+    <a routerLink="../apps">
+      <img src="../../assets/images/BIM/BIM_v1_filters.jpg" alt="BIM Earth filters example" class="sites-example">
+    </a>
+    <a routerLink="../apps">
       <img src="../../assets/images/ODA/cw_menu_open_clean.png" alt="Community Warehouse app with menu open" class="sites-example">
     </a>
     <a routerLink="../apps">
@@ -183,4 +200,3 @@ SECTION 5 - APPS
     </a>
   </div>
 </section>
-
