material typography start plus cards in team section

--- a/src/app/components/apps/apps.component.html
+++ b/src/app/components/apps/apps.component.html
@@ -1,4 +1,4 @@
-<div id="apps-container" class="darktheme page-container">
+<div id="apps-container" class="darktheme page-container mat-typography">
 
   <h1 class="page-header">LINKS &amp; SAMPLES</h1>
   <hr>
