--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="page-container" id="contact-container">
+<div class="page-container mat-typography" id="contact-container">
   <h1 class="page-header">CONTACT</h1>
   <hr>
   <p class="contacttext">
