--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,7 +42,7 @@ SECTION 1.2 - OVERVIEW
 -->
 
 
-<section class="darkBGtitle" id="overview">
+<section class="darkBGtitle mat-typography" id="overview">
   <h2>WE DO AWESOME RIGHT</h2>
   <h4 id="awesome-p">A boutique web development and design agency offering startup and entrepreneurial consulting</h4>
   <h3 id="awesome-h3" class="italic">. . . at your service . . .</h3>
