--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,5 @@
-section {
+section,
+mat-card {
   height: 900px;
 }
 
@@ -6,11 +7,21 @@ mat-grid-tile figure {
   align-items: flex-start;
 }
 
-.description {
+.description,
+mat-card-content {
   overflow-y: scroll;
-  height: 312px;
+  height: 310px;
 }
 
 .team-image {
   height: 580px;
+}
+
+mat-card .team-image {
+  height: 500px;
+  width: 500px;
+}
+
+mat-card-header h3 {
+  padding-top: 20px;
 }
